--- a/client/utils/formFields.css
+++ b/client/utils/formFields.css
@@ -1,3 +1,14 @@
+.anti-entry-message {
+  background: #9bf;
+  margin-bottom: 10px;
+  color: #347;
+
+  text-align: center;
+  font-size: 12px;
+  padding: 10px;
+  box-shadow: 5px 0px 0px #69f inset;
+}
+
 .anti-entry-line {
   margin-bottom: 10px;
 }
